welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:22: error: not found: value c
    if (getCouleurSol()==c){
                         ^