welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {

  while(!estSurBiscuit()){
    if (isFacingTrail()){
      avance()
      baisseBrosse()
      leveBrosse()
    }
    else {
      gauche()
    }
  }

  prendBiscuit()
}

def isFacingTrail():Boolean = {
  var k=false
  if (!estFaceMur()){
    avance()
    if (getCouleurSol()==c){
      k=true
    }
  }
  return k 
}